tests/cases/vectors/ok/vector-reserve-runtime-trap.ari
fn requested_capacity() -> i64 {
  return 4;
}

fn main() -> i64 {
  var values: Vec[i64] = [1, 2, 3];
  values.reserve(requested_capacity());
  return 0;
}
