tests/cases/vectors/errors/vector-method-known-empty-get-dynamic.ari
fn read_empty(index: i64) -> i64 {
    let values: Vec[i64] = [];
    return values.get(index);
}

fn main() -> i64 {
    return read_empty(0);
}
